chore: update deps

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,14 +13,15 @@
   "prettier": "@packages/prettier-config",
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
-    "@next/eslint-plugin-next": "15.3.4",
+    "@next/eslint-plugin-next": "15.3.5",
     "@packages/prettier-config": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "8.35.0",
-    "@typescript-eslint/parser": "8.35.0",
-    "eslint": "9.29.0",
-    "eslint-config-next": "15.3.4",
+    "@typescript-eslint/eslint-plugin": "8.36.0",
+    "@typescript-eslint/parser": "8.36.0",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.3.5",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-prettier": "5.5.1",
+    "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unused-imports": "4.1.4"
