--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.3.4",
+    "@next/mdx": "15.3.5",
     "@packages/db": "workspace:*",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
@@ -23,36 +23,37 @@
     "@radix-ui/react-switch": "1.2.5",
     "@radix-ui/react-visually-hidden": "1.2.3",
     "@t3-oss/env-nextjs": "0.13.8",
-    "@tanstack/react-query": "5.81.2",
-    "@trpc/client": "11.4.2",
-    "@trpc/server": "11.4.2",
-    "@trpc/tanstack-react-query": "11.4.2",
-    "better-auth": "1.2.10",
+    "@tanstack/react-query": "5.83.0",
+    "@trpc/client": "11.4.3",
+    "@trpc/server": "11.4.3",
+    "@trpc/tanstack-react-query": "11.4.3",
+    "better-auth": "1.2.12",
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
-    "lucide-react": "0.523.0",
-    "motion": "12.19.1",
-    "next": "15.3.4",
+    "lucide-react": "0.525.0",
+    "motion": "12.23.3",
+    "next": "15.3.5",
     "next-themes": "0.4.6",
-    "pg": "8.16.2",
+    "pg": "8.16.3",
     "radix-ui": "1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "5.5.0",
     "server-only": "0.0.1",
     "tailwind-merge": "3.3.1",
-    "zod": "3.25.67"
+    "zod": "4.0.5"
   },
   "devDependencies": {
     "@packages/eslint-config": "workspace:*",
     "@packages/prettier-config": "workspace:*",
+    "@packages/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "4.1.11",
     "@types/mdx": "2.0.13",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "tailwindcss": "4.1.11",
-    "tw-animate-css": "1.3.4"
+    "tw-animate-css": "1.3.5"
   },
   "packageManager": "pnpm@10.12.4"
 }
