--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
+    "dev": "sst dev",
     "format": "prettier --write .",
     "lint": "next lint --fix",
     "start": "next start",
@@ -14,7 +14,7 @@
   "dependencies": {
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.3.5",
+    "@next/mdx": "15.4.2",
     "@packages/db": "workspace:*",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
@@ -27,13 +27,13 @@
     "@trpc/client": "11.4.3",
     "@trpc/server": "11.4.3",
     "@trpc/tanstack-react-query": "11.4.3",
-    "better-auth": "1.2.12",
+    "better-auth": "1.3.1",
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
     "lucide-react": "0.525.0",
-    "motion": "12.23.3",
-    "next": "15.3.5",
+    "motion": "12.23.6",
+    "next": "15.4.2",
     "next-themes": "0.4.6",
     "pg": "8.16.3",
     "radix-ui": "1.4.2",
@@ -41,6 +41,7 @@
     "react-dom": "19.1.0",
     "react-icons": "5.5.0",
     "server-only": "0.0.1",
+    "sst": "3.17.10",
     "tailwind-merge": "3.3.1",
     "zod": "4.0.5"
   },
