--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "sst dev",
+    "dev": "next dev --turbopack",
     "format": "prettier --write .",
     "lint": "next lint --fix",
+    "sst:dev": "sst dev",
     "start": "next start",
     "tscheck": "tsc --noEmit --excludeDirectories '.next'"
   },
@@ -14,7 +15,7 @@
   "dependencies": {
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.4.2",
+    "@next/mdx": "15.4.3",
     "@packages/db": "workspace:*",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
@@ -27,13 +28,13 @@
     "@trpc/client": "11.4.3",
     "@trpc/server": "11.4.3",
     "@trpc/tanstack-react-query": "11.4.3",
-    "better-auth": "1.3.1",
+    "better-auth": "1.3.2",
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
     "lucide-react": "0.525.0",
     "motion": "12.23.6",
-    "next": "15.4.2",
+    "next": "15.4.3",
     "next-themes": "0.4.6",
     "pg": "8.16.3",
     "radix-ui": "1.4.2",
