--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db;studio": "drizzle-kit studio",
     "format": "prettier --write .",
     "lint": "eslint --fix",
     "tscheck": "tsc --noEmit"
@@ -17,6 +19,7 @@
   "prettier": "@packages/prettier-config",
   "dependencies": {
     "@t3-oss/env-core": "0.13.8",
+    "dotenv": "17.2.0",
     "drizzle-orm": "0.44.3",
     "pg": "8.16.3",
     "zod": "4.0.5"
