--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -27,12 +27,14 @@
     "@t3-oss/env-nextjs": "0.13.8",
     "@tanstack/react-query": "5.83.0",
     "@trpc/client": "11.4.3",
+    "@trpc/react-query": "11.4.3",
     "@trpc/server": "11.4.3",
     "@trpc/tanstack-react-query": "11.4.3",
     "better-auth": "1.3.2",
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
+    "drizzle-orm": "0.44.3",
     "lucide-react": "0.525.0",
     "motion": "12.23.6",
     "next": "15.4.3",
@@ -44,6 +46,7 @@
     "react-icons": "5.5.0",
     "server-only": "0.0.1",
     "sst": "3.17.10",
+    "superjson": "2.2.2",
     "tailwind-merge": "3.3.1",
     "zod": "4.0.5"
   },
