--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,7 +13,7 @@
     "db:push": "drizzle-kit push",
     "db;studio": "drizzle-kit studio",
     "format": "prettier --write .",
-    "lint": "eslint --fix",
+    "lint": "eslint --fix --max-warnings=0",
     "tscheck": "tsc --noEmit"
   },
   "prettier": "@packages/prettier-config",
