--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -6,9 +6,11 @@
     ".": "./prettier.config.js"
   },
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint --fix --max-warnings=0"
   },
   "devDependencies": {
+    "@packages/eslint-config": "workspace:*",
     "prettier": "3.6.2",
     "prettier-plugin-embed": "0.5.0",
     "prettier-plugin-packagejson": "2.5.19",
