fix: packagejson script

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,7 +11,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db;studio": "drizzle-kit studio",
+    "db:studio": "drizzle-kit studio",
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
     "tscheck": "tsc --noEmit"
