--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -13,12 +13,14 @@
   },
   "prettier": "@packages/prettier-config",
   "dependencies": {
+    "@hookform/resolvers": "5.2.0",
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
     "@next/mdx": "15.4.4",
     "@packages/db": "workspace:*",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-label": "2.1.7",
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-switch": "1.2.5",
@@ -43,6 +45,7 @@
     "radix-ui": "1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "7.61.1",
     "react-icons": "5.5.0",
     "server-only": "0.0.1",
     "sst": "3.17.10",
