--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -62,6 +62,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "tailwindcss": "4.1.11",
-    "tw-animate-css": "1.3.6"
+    "tw-animate-css": "1.3.6",
+    "uuid": "11.1.0"
   }
 }
