--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -33,7 +33,7 @@
     "@trpc/react-query": "11.4.3",
     "@trpc/server": "11.4.3",
     "@trpc/tanstack-react-query": "11.4.3",
-    "better-auth": "1.3.3",
+    "better-auth": "1.3.4",
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
@@ -49,6 +49,7 @@
     "react-hook-form": "7.61.1",
     "react-icons": "5.5.0",
     "server-only": "0.0.1",
+    "sonner": "2.0.6",
     "sst": "3.17.10",
     "superjson": "2.2.2",
     "tailwind-merge": "3.3.1",
