--- a/packages/db-legacy/docker-compose.yml
+++ b/packages/db-legacy/docker-compose.yml
@@ -11,11 +11,11 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
+      - ./data/dump.sql:/docker-entrypoint-initdb.d/dump.sql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
 
-  postgres:
+  postgres-current:
     container_name: postgres-current
     image: postgres:alpine
     restart: no
@@ -55,35 +55,41 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-      postgres:
+      postgres-current:
         condition: service_healthy
     environment:
       PGPASSWORD: postgres
     command: >
-      sh -c "
+      sh -c '
         if [ ! -f /tmp/legacy.sql ]; then
           pgloader mysql://root:root@mysql:3306/mlrepo postgresql://postgres:postgres@postgres-legacy:5432/mlrepo;
 
-          psql -h postgres-legacy -U postgres -d mlrepo -c \"
+          psql -h postgres-legacy -U postgres -d mlrepo -c "
             DROP SCHEMA IF EXISTS public CASCADE;
-            ALTER SCHEMA mlrepo RENAME TO public;
-            ALTER TABLE datasets RENAME TO datasets_legacy;
-          \";
+            ALTER SCHEMA mlrepo RENAME TO legacy;
+          ";
 
-          pg_dump -h postgres-legacy -U postgres -d mlrepo -F c -b -f /tmp/legacy.sql;
+          pg_dump -h postgres-legacy -U postgres -d mlrepo -F c -b -n legacy -f /tmp/legacy.sql;
         fi
 
-        psql -h postgres -U postgres -c \"DROP DATABASE IF EXISTS mlrepo;\";
-        psql -h postgres -U postgres -c \"CREATE DATABASE mlrepo;\";
+        psql -h postgres-current -U postgres -c "DROP DATABASE IF EXISTS mlrepo;";
+        psql -h postgres-current -U postgres -c "CREATE DATABASE mlrepo;";
 
-        pg_restore -h postgres -U postgres -d mlrepo -v /tmp/legacy.sql;
-      "
+        pg_restore -h postgres-current -U postgres -d mlrepo -v /tmp/legacy.sql;
+
+        for script in $(ls /migrations/*.sql | sort); do
+          echo "Running $$script"
+          psql -h postgres-current -U postgres -d mlrepo -q -f "$$script"
+        done
+      '
+    volumes:
+      - ../db/migrations:/migrations
 
   migrator:
     container_name: migrator
     image: postgres:alpine
     depends_on:
-      postgres:
+      postgres-current:
         condition: service_healthy
       postgres-legacy:
         condition: service_healthy
@@ -96,11 +102,11 @@ services:
         set -e
         for script in $(ls /migrate/*.sql | sort); do
           echo "Running $$script"
-          psql -h postgres -U postgres -d mlrepo -q -f "$$script"
+          psql -h postgres-current -U postgres -d mlrepo -q -f "$$script"
         done
 
-        pg_dump -h postgres -U postgres -d mlrepo --data-only -Fc --file=/output/out.dump
+        pg_dump -h postgres-current -U postgres -d mlrepo --data-only -Fc --file=/output/out.dump
       '
     volumes:
       - ./migrate:/migrate
-      - ./:/output
+      - ./data:/output
