--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -13,10 +13,11 @@
   },
   "prettier": "@packages/prettier-config",
   "dependencies": {
-    "@hookform/resolvers": "5.2.0",
+    "@aws-sdk/client-sesv2": "3.857.0",
+    "@hookform/resolvers": "5.2.1",
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.4.4",
+    "@next/mdx": "15.4.5",
     "@packages/db": "workspace:*",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
@@ -33,19 +34,20 @@
     "@trpc/react-query": "11.4.3",
     "@trpc/server": "11.4.3",
     "@trpc/tanstack-react-query": "11.4.3",
+    "bcrypt": "6.0.0",
     "better-auth": "1.3.4",
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
-    "drizzle-orm": "0.44.3",
-    "lucide-react": "0.525.0",
-    "motion": "12.23.9",
-    "next": "15.4.4",
+    "drizzle-orm": "0.44.4",
+    "lucide-react": "0.534.0",
+    "motion": "12.23.12",
+    "next": "15.4.5",
     "next-themes": "0.4.6",
     "pg": "8.16.3",
     "radix-ui": "1.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "7.61.1",
     "react-icons": "5.5.0",
     "server-only": "0.0.1",
@@ -53,17 +55,18 @@
     "sst": "3.17.10",
     "superjson": "2.2.2",
     "tailwind-merge": "3.3.1",
-    "zod": "4.0.10"
+    "uuid": "11.1.0",
+    "zod": "4.0.14"
   },
   "devDependencies": {
     "@packages/eslint-config": "workspace:*",
     "@packages/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "4.1.11",
+    "@types/bcrypt": "6.0.0",
     "@types/mdx": "2.0.13",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
     "tailwindcss": "4.1.11",
-    "tw-animate-css": "1.3.6",
-    "uuid": "11.1.0"
+    "tw-animate-css": "1.3.6"
   }
 }
