--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./schema": "./src/schema.ts",
-    "./env": "./env.ts",
-    "./enum": "./src/enum.ts"
+    "./schema": "./src/schema/index.ts",
+    "./enum": "./src/enum.ts",
+    "./env": "./env.ts"
   },
   "scripts": {
     "db:generate": "drizzle-kit generate",
@@ -21,14 +21,14 @@
   "dependencies": {
     "@t3-oss/env-core": "0.13.8",
     "dotenv": "17.2.1",
-    "drizzle-orm": "0.44.3",
+    "drizzle-orm": "0.44.4",
     "pg": "8.16.3",
-    "zod": "4.0.10"
+    "zod": "4.0.14"
   },
   "devDependencies": {
     "@packages/eslint-config": "workspace:*",
     "@packages/typescript-config": "workspace:*",
-    "@types/pg": "8.15.4",
+    "@types/pg": "8.15.5",
     "drizzle-kit": "0.31.4"
   }
 }
