--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,10 +1,3 @@
 {
-  "extends": "@packages/typescript-config",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@packages/db/*": ["src/*"],
-      "@packages/db/env": ["env.ts"]
-    }
-  }
+  "extends": "@packages/typescript-config"
 }
