--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "3.1.0",
     "@next/mdx": "15.4.5",
     "@packages/db": "workspace:*",
+    "@packages/email": "workspace:*",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
