feat: rest password

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@website/*": ["src/*"],
+      "@app/*": ["src/app/*"],
       "@components/*": ["src/components/*"],
       "@lib/*": ["src/lib/*"],
       "@server/*": ["src/server/*"],
