chore: update deps

--- a/packages/db-legacy/package.json
+++ b/packages/db-legacy/package.json
@@ -6,8 +6,5 @@
   "scripts": {
     "format": "prettier --write ."
   },
-  "prettier": "@packages/prettier-config",
-  "devDependencies": {
-    "@packages/prettier-config": "workspace:*"
-  }
+  "prettier": "@packages/prettier-config"
 }
