--- a/package.json
+++ b/package.json
@@ -32,9 +32,16 @@
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
+    "@packages/eslint-config": "workspace:*",
+    "@packages/prettier-config": "workspace:*",
+    "@packages/typescript-config": "workspace:*",
     "@types/node": "24.1.0",
     "husky": "9.1.7",
     "typescript": "5.8.3"
   },
-  "packageManager": "pnpm@10.14.0"
+  "packageManager": "pnpm@10.14.0",
+  "engines": {
+    "node": "24.2.0",
+    "pnpm": "10.14.0"
+  }
 }
