--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -13,18 +13,17 @@
   },
   "prettier": "@packages/prettier-config",
   "dependencies": {
-    "@react-email/components": "0.3.3",
+    "@react-email/components": "0.4.0",
     "@t3-oss/env-core": "0.13.8",
     "@t3-oss/env-nextjs": "0.13.8",
     "dotenv": "17.2.1",
     "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "react-dom": "19.1.1",
+    "zod": "4.0.14"
   },
   "devDependencies": {
-    "@packages/eslint-config": "workspace:*",
-    "@packages/typescript-config": "workspace:*",
-    "@react-email/preview-server": "4.2.5",
+    "@react-email/preview-server": "4.2.7",
     "@types/react": "19.1.9",
-    "react-email": "4.2.5"
+    "react-email": "4.2.7"
   }
 }
