--- a/packages/db/docker-compose.yml
+++ b/packages/db/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     env_file: .env
     ports:
       - "5432:5432"
+    volumes:
+      - ./startup.sql:/docker-entrypoint-initdb.d/init.sql
