chore: update import paths

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@components/*": ["src/components/*"],
-      "@lib/*": ["src/lib/*"],
-      "@server/*": ["src/server/*"],
-      "@env": ["env.ts"]
+      "@/app/*": ["src/app/*"],
+      "@/components/*": ["src/components/*"],
+      "@/lib/*": ["src/lib/*"],
+      "@/server/*": ["src/server/*"],
+      "@/env": ["env.ts"]
     },
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "preserve",
