--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -41,6 +41,7 @@
     "client-only": "0.0.1",
     "clsx": "2.1.1",
     "drizzle-orm": "0.44.4",
+    "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
     "lucide-react": "0.536.0",
     "motion": "12.23.12",
