--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-switch": "1.2.5",
     "@radix-ui/react-tabs": "1.1.12",
+    "@radix-ui/react-tooltip": "1.2.7",
     "@radix-ui/react-visually-hidden": "1.2.3",
     "@t3-oss/env-nextjs": "0.13.8",
     "@tanstack/react-query": "5.84.1",
