--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -13,8 +13,10 @@
   },
   "prettier": "@packages/prettier-config",
   "dependencies": {
+    "@aws-sdk/client-s3": "3.859.0",
     "@aws-sdk/client-sesv2": "3.859.0",
     "@hookform/resolvers": "5.2.1",
+    "@mantine/hooks": "8.2.2",
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
     "@next/mdx": "15.4.5",
