--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -22,6 +22,7 @@
     "@next/mdx": "15.4.5",
     "@packages/db": "workspace:*",
     "@packages/email": "workspace:*",
+    "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
@@ -50,6 +51,7 @@
     "motion": "12.23.12",
     "next": "15.4.5",
     "next-themes": "0.4.6",
+    "nuqs": "2.4.3",
     "pg": "8.16.3",
     "radix-ui": "1.4.2",
     "react": "19.1.1",
