--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-label": "2.1.7",
     "@radix-ui/react-separator": "1.1.7",
+    "@radix-ui/react-slider": "1.3.5",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-switch": "1.2.5",
     "@radix-ui/react-tabs": "1.1.12",
@@ -48,6 +49,7 @@
     "drizzle-orm": "0.44.4",
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
+    "lodash": "4.17.21",
     "lucide-react": "0.536.0",
     "motion": "12.23.12",
     "next": "15.4.5",
@@ -70,6 +72,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.11",
     "@types/bcrypt": "6.0.0",
+    "@types/lodash": "4.17.20",
     "@types/mdx": "2.0.13",
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7",
