--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-popover": "1.1.14",
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slider": "1.3.5",
     "@radix-ui/react-slot": "1.2.3",
@@ -46,11 +47,13 @@
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
+    "cmdk": "1.1.1",
     "drizzle-orm": "0.44.4",
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
     "lodash": "4.17.21",
     "lucide-react": "0.536.0",
+    "match-sorter": "8.1.0",
     "motion": "12.23.12",
     "next": "15.4.5",
     "next-themes": "0.4.6",
