--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -64,6 +64,7 @@
     "react-dom": "19.1.1",
     "react-hook-form": "7.62.0",
     "react-icons": "5.5.0",
+    "react-window": "1.8.11",
     "server-only": "0.0.1",
     "sonner": "2.0.7",
     "sst": "3.17.10",
@@ -79,6 +80,7 @@
     "@types/mdx": "2.0.13",
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7",
+    "@types/react-window": "1.8.8",
     "tailwindcss": "4.1.11",
     "tw-animate-css": "1.3.6"
   }
