--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -9,8 +9,7 @@
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0"
   },
-  "devDependencies": {
-    "prettier": "3.6.2",
+  "dependencies": {
     "prettier-plugin-embed": "0.5.0",
     "prettier-plugin-packagejson": "2.5.19",
     "prettier-plugin-sh": "0.18.0",
