--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev --turbopack",
     "format": "prettier --write .",
     "lint": "next lint --fix --max-warnings=0",
+    "prepare": "sst install",
     "sst:dev": "sst dev",
     "start": "next start",
     "tscheck": "tsc --noEmit --excludeDirectories '.next'"
