--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "8.39.1",
     "eslint-config-next": "15.4.6",
     "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-mdx": "3.6.2",
     "eslint-plugin-only-warn": "1.1.0",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-react": "7.37.5",
