--- a/packages/db-legacy/package.json
+++ b/packages/db-legacy/package.json
@@ -6,5 +6,10 @@
   "scripts": {
     "format": "prettier --write ."
   },
-  "prettier": "@packages/prettier-config"
+  "prettier": "@packages/prettier-config",
+  "lint-staged": {
+    "*": [
+      "prettier --write"
+    ]
+  }
 }
