--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -9,6 +9,14 @@
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0"
   },
+  "lint-staged": {
+    "*": [
+      "prettier --write"
+    ],
+    "*.js": [
+      "eslint --fix --max-warnings=0"
+    ]
+  },
   "dependencies": {
     "prettier-plugin-embed": "0.5.0",
     "prettier-plugin-packagejson": "2.5.19",
