--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -4,5 +4,10 @@
   "scripts": {
     "format": "prettier --write ."
   },
-  "prettier": "@packages/prettier-config"
+  "prettier": "@packages/prettier-config",
+  "lint-staged": {
+    "*": [
+      "prettier --write"
+    ]
+  }
 }
