--- a/packages/db-legacy/package.json
+++ b/packages/db-legacy/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "format": "prettier --write ."
   },
-  "prettier": "@packages/prettier-config",
   "lint-staged": {
     "*": [
       "prettier --write"
     ]
-  }
+  },
+  "prettier": "@packages/prettier-config"
 }
