--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@packages/typescript-config",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "format": "prettier --write ."
   },
-  "prettier": "@packages/prettier-config",
   "lint-staged": {
     "*": [
       "prettier --write"
     ]
-  }
+  },
+  "prettier": "@packages/prettier-config"
 }
