feat: add dataset citation column

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "format": "pnpm -r format --log-level error",
     "lint": "pnpm -r lint",
-    "lint-staged:all": "pnpm -r --workspace-concurrency=1 exec lint-staged",
+    "lint-staged": "pnpm -r --workspace-concurrency=1 exec lint-staged",
     "prepare": "husky",
     "tscheck": "pnpm -r --parallel tscheck"
   },
