--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -60,7 +60,9 @@
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "drizzle-orm": "0.44.4",
+    "drizzle-zod": "0.8.3",
     "embla-carousel-react": "8.6.0",
+    "highlight.js": "11.11.1",
     "input-otp": "1.4.2",
     "lodash": "4.17.21",
     "lucide-react": "0.539.0",
