--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,13 +9,10 @@
     "./env": "./env.ts"
   },
   "scripts": {
-    "_reset": "docker compose down && docker compose up -d --build && rm -rf ./migrations && pnpm generate init && sed -i '1iCREATE EXTENSION IF NOT EXISTS pg_trgm;\\n' ./migrations/0000_init.sql && sed -i '2i\\' ./migrations/0000_init.sql && pnpm migrate",
+    "_reset": "rm -rf ./migrations && pnpm generate init && sed -i '1iCREATE EXTENSION IF NOT EXISTS pg_trgm;\\n' ./migrations/0000_init.sql && sed -i '2i\\' ./migrations/0000_init.sql",
+    "db": "sst shell drizzle-kit",
     "format": "prettier --write .",
-    "generate": "drizzle-kit generate --name",
     "lint": "eslint --fix --max-warnings=0",
-    "migrate": "drizzle-kit migrate",
-    "push": "drizzle-kit push",
-    "studio": "drizzle-kit studio",
     "tscheck": "tsc --noEmit"
   },
   "lint-staged": {
@@ -28,7 +25,6 @@
   },
   "prettier": "@packages/prettier-config",
   "dependencies": {
-    "@t3-oss/env-core": "0.13.8",
     "dotenv": "17.2.1",
     "drizzle-orm": "0.44.4",
     "pg": "8.16.3",
