--- a/packages/db/docker-compose.yml
+++ b/packages/db/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     restart: unless-stopped
     env_file: .env
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     volumes:
       - ./compose.sql:/docker-entrypoint-initdb.d/compose.sql
