--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./emails/index.ts"
+    "./emails": "./emails/index.ts",
+    ".": "./index.ts"
   },
   "scripts": {
     "dev": "email dev",
@@ -21,9 +22,8 @@
   },
   "prettier": "@packages/prettier-config",
   "dependencies": {
+    "@aws-sdk/client-sesv2": "3.864.0",
     "@react-email/components": "0.5.0",
-    "@t3-oss/env-core": "0.13.8",
-    "@t3-oss/env-nextjs": "0.13.8",
     "dotenv": "17.2.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
