--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "build": "next build",
     "dev": "next dev --turbopack",
     "format": "prettier --write .",
     "lint": "next lint --fix --max-warnings=0",
@@ -25,6 +26,7 @@
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
     "@next/mdx": "15.4.6",
+    "@packages/auth": "workspace:*",
     "@packages/db": "workspace:*",
     "@packages/email": "workspace:*",
     "@radix-ui/react-accordion": "1.2.12",
@@ -78,12 +80,10 @@
     "sonner": "2.0.7",
     "superjson": "2.2.2",
     "tailwind-merge": "3.3.1",
-    "uuid": "11.1.0",
     "zod": "4.0.17"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.12",
-    "@types/bcrypt": "6.0.0",
     "@types/lodash": "4.17.20",
     "@types/mdx": "2.0.13",
     "@types/react": "19.1.10",
