--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "scripts": {
     "dev": "sst dev",
+    "deploy": "sst deploy --stage production",
     "format": "pnpm -r format --log-level error",
     "lint": "pnpm -r lint",
     "lint-staged": "pnpm -r --workspace-concurrency=1 exec lint-staged",
@@ -43,7 +44,6 @@
     "@packages/prettier-config": "workspace:*",
     "@packages/typescript-config": "workspace:*",
     "@types/node": "24.3.0",
-    "dotenv": "17.2.1",
     "eslint": "9.33.0",
     "husky": "9.1.7",
     "lint-staged": "16.1.5",
