--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     }
   ],
   "scripts": {
-    "dev": "sst dev",
     "deploy": "sst deploy --stage production",
+    "dev": "sst dev",
     "format": "pnpm -r format --log-level error",
     "lint": "pnpm -r lint",
     "lint-staged": "pnpm -r --workspace-concurrency=1 exec lint-staged",
-    "prepare": "husky",
+    "prepare": "husky && sst install && sst telemetry disable",
     "tscheck": "pnpm -r --parallel tscheck"
   },
   "commitlint": {
