--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,7 @@
   },
   "lint-staged": {
     "*": [
-      "prettier --write"
+      "prettier --write --ignore-unknown"
     ],
     "*.{js,ts}": [
       "eslint --fix --max-warnings=0"
