chore: add mimetype images

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -73,6 +73,7 @@
     "react-dom": "19.1.1",
     "react-hook-form": "7.62.0",
     "react-icons": "5.5.0",
+    "react-split": "2.0.14",
     "react-window": "1.8.11",
     "server-only": "0.0.1",
     "sonner": "2.0.7",
