--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3000 --turbopack",
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
     "tscheck": "tsc --noEmit --excludeDirectories '.next'"
