--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "build": "next build",
+    "build": "open-next build",
     "dev": "next dev -p 3000 --turbopack",
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
@@ -67,7 +67,8 @@
     "motion": "12.23.12",
     "next": "15.5.0",
     "next-themes": "0.4.6",
-    "nuqs": "2.4.3",
+    "nuqs": "2.5.0",
+    "open-next": "3.1.3",
     "pg": "8.16.3",
     "radix-ui": "1.4.3",
     "react": "19.1.1",
@@ -86,7 +87,7 @@
     "@tailwindcss/postcss": "4.1.12",
     "@types/lodash": "4.17.20",
     "@types/mdx": "2.0.13",
-    "@types/react": "19.1.10",
+    "@types/react": "19.1.11",
     "@types/react-dom": "19.1.7",
     "@types/react-window": "1.8.8",
     "tailwindcss": "4.1.12",
