--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -25,7 +25,8 @@
     "@packages/email": "workspace:*",
     "bcrypt": "6.0.0",
     "better-auth": "1.3.7",
-    "uuid": "11.1.0"
+    "uuid": "11.1.0",
+    "zod": "4.0.17"
   },
   "devDependencies": {
     "@types/bcrypt": "6.0.0"
