--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "build": "open-next build",
+    "build": "next build",
     "dev": "next dev -p 3000 --turbopack",
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
@@ -37,6 +37,7 @@
     "@radix-ui/react-hover-card": "1.1.15",
     "@radix-ui/react-label": "2.1.7",
     "@radix-ui/react-popover": "1.1.15",
+    "@radix-ui/react-scroll-area": "1.2.10",
     "@radix-ui/react-select": "2.2.6",
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slider": "1.3.6",
@@ -68,7 +69,6 @@
     "next": "15.5.0",
     "next-themes": "0.4.6",
     "nuqs": "2.5.0",
-    "open-next": "3.1.3",
     "pg": "8.16.3",
     "radix-ui": "1.4.3",
     "react": "19.1.1",
@@ -90,6 +90,7 @@
     "@types/react": "19.1.11",
     "@types/react-dom": "19.1.7",
     "@types/react-window": "1.8.8",
+    "open-next": "3.1.3",
     "tailwindcss": "4.1.12",
     "tw-animate-css": "1.3.7"
   }
