--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -60,6 +60,7 @@
     "cmdk": "1.1.1",
     "drizzle-orm": "0.44.4",
     "embla-carousel-react": "8.6.0",
+    "fuse.js": "7.1.0",
     "highlight.js": "11.11.1",
     "input-otp": "1.4.2",
     "lodash": "4.17.21",
