--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: production-deploy
+  cancel-in-progress: false
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -20,7 +24,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 24.13.0
-          cache: pnpm
 
       - uses: pnpm/action-setup@v4
         with:
