--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -8,7 +8,7 @@ on:
 concurrency:
   group: production-deploy
   cancel-in-progress: false
-  
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -30,6 +30,9 @@ jobs:
           run_install: |
             args:
               - --frozen-lockfile
+
+      - name: Prefer SST bundled Pulumi
+        run: echo "$HOME/.config/sst/bin" >> $GITHUB_PATH
 
       - name: SST deploy
         run: pnpm sst deploy --stage production
