--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -19,16 +19,16 @@
   },
   "prettier": "@packages/prettier-config",
   "dependencies": {
-    "@aws-sdk/client-s3": "3.972.0",
+    "@aws-sdk/client-s3": "3.995.0",
     "@hookform/resolvers": "5.2.2",
-    "@mantine/hooks": "8.3.13",
+    "@mantine/hooks": "8.3.15",
     "@mdx-js/loader": "3.1.1",
     "@mdx-js/react": "3.1.1",
-    "@next/mdx": "16.1.4",
+    "@next/mdx": "16.1.6",
     "@packages/auth": "workspace:*",
     "@packages/db": "workspace:*",
     "@packages/email": "workspace:*",
-    "@primer/octicons-react": "19.21.2",
+    "@primer/octicons-react": "19.22.0",
     "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-avatar": "1.1.11",
     "@radix-ui/react-checkbox": "1.3.3",
@@ -47,13 +47,13 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@radix-ui/react-visually-hidden": "1.2.4",
     "@t3-oss/env-nextjs": "0.13.10",
-    "@tanstack/react-query": "5.90.19",
-    "@trpc/client": "11.8.1",
-    "@trpc/react-query": "11.8.1",
-    "@trpc/server": "11.8.1",
-    "@trpc/tanstack-react-query": "11.8.1",
+    "@tanstack/react-query": "5.90.21",
+    "@trpc/client": "11.10.0",
+    "@trpc/react-query": "11.10.0",
+    "@trpc/server": "11.10.0",
+    "@trpc/tanstack-react-query": "11.10.0",
     "bcrypt": "6.0.0",
-    "better-auth": "1.4.17",
+    "better-auth": "1.4.18",
     "class-variance-authority": "0.7.1",
     "client-only": "0.0.1",
     "clsx": "2.1.1",
@@ -64,34 +64,34 @@
     "highlight.js": "11.11.1",
     "input-otp": "1.4.2",
     "lodash": "4.17.23",
-    "lucide-react": "0.562.0",
+    "lucide-react": "0.575.0",
     "match-sorter": "8.2.0",
-    "motion": "12.29.0",
-    "next": "16.1.4",
+    "motion": "12.34.3",
+    "next": "16.1.6",
     "next-themes": "0.4.6",
-    "nuqs": "2.8.6",
-    "pg": "8.17.2",
+    "nuqs": "2.8.8",
+    "pg": "8.18.0",
     "radix-ui": "1.4.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "react-hook-form": "7.71.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "react-hook-form": "7.71.2",
     "react-icons": "5.5.0",
     "react-split": "2.0.14",
-    "react-window": "2.2.5",
+    "react-window": "2.2.7",
     "server-only": "0.0.1",
     "sonner": "2.0.7",
     "superjson": "2.2.6",
-    "tailwind-merge": "3.4.0",
-    "zod": "4.3.5"
+    "tailwind-merge": "3.5.0",
+    "tailwindcss": "4.2.0",
+    "tw-animate-css": "1.4.0",
+    "zod": "4.3.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "4.1.18",
+    "@tailwindcss/postcss": "4.2.0",
     "@types/lodash": "4.17.23",
     "@types/mdx": "2.0.13",
-    "@types/react": "19.2.9",
+    "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
-    "open-next": "3.1.3",
-    "tailwindcss": "4.1.18",
-    "tw-animate-css": "1.4.0"
+    "open-next": "3.1.3"
   }
 }
