chore: clean tsc scripts

--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -10,7 +10,7 @@
     "dev": "email dev",
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
-    "tscheck": "tsc --noEmit"
+    "tscheck": "tsc"
   },
   "lint-staged": {
     "*": [
