--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
-    "tscheck": "tsc --noEmit"
+    "tscheck": "tsc"
   },
   "lint-staged": {
     "*": [
