--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 3000 --turbopack",
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
-    "tscheck": "tsc --noEmit --excludeDirectories '.next'"
+    "tscheck": "tsc"
   },
   "lint-staged": {
     "*": [
