--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,7 +14,7 @@
     "db": "sst shell drizzle-kit",
     "format": "prettier --write .",
     "lint": "eslint --fix --max-warnings=0",
-    "tscheck": "tsc --noEmit"
+    "tscheck": "tsc"
   },
   "lint-staged": {
     "*": [
